personal karaoke service

--- a/en/anida.html
+++ b/en/anida.html
@@ -107,7 +107,8 @@ a. Fast decoding speed. Whether running native machine code that compiled from C
 </p>
 
 <h2>Personal Private Music Player</h2>
-<p><b>Personal Private Music Player</b> is a specially service for peoples who want to listen their favourite musics on Android or iOS devices. We help to convert their favourite music to Anida format files and develop a specially customised music player only used for themselves privately so that they can enjoy them on mobile phone or tablets. The music source files can come from DVD, CD, Movie, Flash, Game, common audio files, Web Page and any other music materials, and internet. (in fact we also provide search service to find someone's favourite music on internet if they requested and get small fee)
+<p><b>Personal Private Music Player</b> is a specially service for peoples who want to listen their favourite musics on Android or iOS devices. We help to convert their favourite music to Anida format files and develop a specially customised music player only used for themselves privately so that they can enjoy them on mobile phone or tablets. The music source files can come from DVD, CD, Movie, Flash, Game, common audio files, Web Page and any other music materials, and internet. (in fact we also provide search service to find someone's favourite music on internet if they requested and get small fee). <br>
+more info: <a href="karaoke.html" target="_blank"> → ♪  Personal music service</a>.</p>
 </p>
 
 <div style="display:none">
