append IDE references

--- a/en/Speare.html
+++ b/en/Speare.html
@@ -12,7 +12,7 @@
 <meta name="description" content="Speare, an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Speare,IDE,Code Editor,Text Editor,Ruby Debugger,mruby Debugger,Lua Debugger,Python Debugger,PHP Debugger,Syntax Highlighting,Lex,Parser,Compiler,Interpreter,Programming Language,TextEdit,TextMate,CotEditor,Textadept,Android Studio,ActiveState,Komodo,Xcode,Visual Studio Code,Eclipse,Scrpting Language,Lua,Scheme,Python,Ruby,C,C++,SQL,Objective-C,Swift,Kotlin,Haxe,Haskell,TCL,Javascript,Lisp,Perl,PHP,GO,Markdown,Node">
+<meta name="keywords" content="Speare,IDE,Code Editor,Text Editor,Ruby Debugger,mruby Debugger,Lua Debugger,Python Debugger,PHP Debugger,Syntax Highlighting,Lex,Parser,Compiler,Interpreter,Programming Language,TextEdit,Vim,Emacs,Qt,GTK+,Tcl/Tk,TextMate,CotEditor,Textadept,Android Studio,ActiveState,Komodo,Xcode,Lazarus,ZeroBraneStudio,Visual Studio Code,Eclipse,Scrpting Language,Lua,Scheme,Python,Ruby,C,C++,SQL,Objective-C,Swift,Kotlin,Haxe,Haskell,TCL,Javascript,Lisp,Perl,PHP,GO,Markdown,Node">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .warning {color:#cce619;}
@@ -73,13 +73,13 @@ The free small IDE for scripting languages.
 </p>
 
 
-<table><tr><td>No.</td><td> Code Editor </td><td> Size </td> <td>No.</td><td> IDE </td><td> Size </td>  </tr>
-<tr><td>1</td><td>Speare    1.2.56 </td><td> 5.6MB </td> <td>5</td> <td>Visual Studio Code (bare system) 1.36.1 </td><td> 211MB </td></tr>
-<tr><td>2</td><td>TextMate  1.5.7 </td><td> 23.3MB </td> <td>6</td> <td>ActiveState Komodo 11.1 </td><td> 334MB </td></tr> 
-<tr><td>3</td><td>Textadept 10.4  </td><td> 35MB  </td> <td>7</td><td>Atom 1.38.2           </td><td> 558MB </td></tr> 
-<tr><td>4</td><td>CotEditor 3.3   </td><td> 47MB  </td>  <td>8</td> <td>Android Studio 3.1 </td><td> 1.37GB </td></tr>
-<tr><td></td><td>                     </td><td>   </td> <td>9</td> <td>Eclipse IDE   4.12 </td><td> 400MB~5GB </td></tr>
-<tr><td> </td><td>                    </td><td>    </td> <td>10</td> <td>Xcode      10.0 </td><td> 12GB </td></tr>
+<table><tr><td>No.</td><td> Name </td><td> Size </td> <td>No.</td><td> Name </td><td> Size </td>  </tr>
+<tr><td>1</td><td>Speare    1.2.56 </td><td> 5.6MB </td> <td>7</td> <td>Visual Studio Code (bare system) 1.36.1 </td><td> 211MB </td></tr>
+<tr><td>2</td><td>TextMate  1.5.7 </td><td> 23.3MB </td> <td>8</td> <td>ActiveState Komodo 11.1 </td><td> 334MB </td></tr> 
+<tr><td>3</td><td>Textadept 10.4  </td><td> 35MB  </td> <td>9</td>  <td>Atom 1.38.2           </td><td> 558MB </td></tr> 
+<tr><td>4</td><td>CotEditor 3.3   </td><td> 47MB  </td>  <td>10</td> <td>Android Studio 3.1 </td><td> 1.37GB </td></tr>
+<tr><td>5</td><td>Lazarus (without FreePascal compiler and source packages) 2.0.8</td><td>200.9MB</td> <td>11</td><td>Eclipse IDE   4.12 </td><td>400MB~5GB</td></tr>
+<tr><td>6</td><td>ZeroBraneStudio  6.0</td><td> 602.1MB </td> <td>12</td><td>Xcode      10.0 </td><td> 12GB</td></tr>
 </table>
 
 
