--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -46,7 +46,7 @@ table td { max-width:200px; text-align: center; padding:10px; border: 1px solid 
 
 <div class="smallscreen">
 <img src="../images/littlefox/logo.png" style="width: 120px;" /><br>
-<h2> LittleFox <br><em> Version 1.5.13 </em></h2>
+<h2> LittleFox <br><em> Version 1.5.14 </em></h2>
 
 <p><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, or just scale the resolution of your videos to slim them so that you can very easily share them with a very small file size.</p>
 
@@ -68,6 +68,7 @@ table td { max-width:200px; text-align: center; padding:10px; border: 1px solid 
 <p>If you can't open the link above, please launch App Store and found LittleFox by searching.</p>
 
 <h2>Screenshot</h2>
+<a href="../images/littlefox/4.png" target="_blank"><img src="../images/littlefox/4.png" class="screenshots"/></a><br>
 <a href="../images/littlefox/1.png" target="_blank"><img src="../images/littlefox/1.png" class="screenshots"/></a><br>
 <a href="../images/littlefox/2.png" target="_blank"><img src="../images/littlefox/2.png" class="screenshots"/></a><br>
 
@@ -135,7 +136,9 @@ The follow are the steps about how to synthesis video with lyrics sheet, of cour
 
 <h2>Tips</h2>
 <img src="../images/littlefox/white.png" /><br>
-<p><span><img src="../images/littlefox/tips.png" class="tips" /></span> Set transparent background of the output movie, or transparent shadow, please click the button on the right side of "<b>Screen Background</b>" or the button on the right side of "<b>Shadow Colour</b>", and then on the prompt panel select the colour <span class="green">"White"</span>.<br><br></p>
+<p><span><img src="../images/littlefox/tips.png" class="tips" /></span>
+1. You can directly input sample text into the "Sample Text Lines" box to replace the default one line or all.<br>
+2. Set transparent background of the output movie, or transparent shadow, please click the button on the right side of "<b>Screen Background</b>" or the button on the right side of "<b>Shadow Colour</b>", and then on the prompt panel select the colour <span class="green">"White"</span>.<br><br></p>
 
 <h2>What's new:</h2>
 <p>1. Subtitle placed at the bottom of outside margin without video area overlay.</p>
