--- a/en/index.html
+++ b/en/index.html
@@ -40,6 +40,12 @@
 <!--img src="http://www.sevenuc.com/images/home-hero.jpg">-->
 
 
+
+<h2>No.1</h2>
+<p>The first rule to make product and system is respecting the end users.</p>
+
+<p><br><br></p>
+
 <h2>Speare code editor</h2>
 <p><a href="http://www.sevenuc.com/en/Speare.html"><img src="http://www.sevenuc.com/images/Speare/logo.png" class="icon"></a>
 <a href="http://www.sevenuc.com/en/Speare.html">Speare</a> is an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl. It was originally developed to providing a native scripting language debugging environment that seamlessly integrated with C and C++, and with an efficient code navigation and call routines tracing ability. Speare has very simple interface that allows end user to add a new programming language code runner, parser, syntax highlighting, code formatter and debugger to it. Most of the debuggers of Speare code editor supports extending themselves in source code level and directly switch between any version of self-compiled scripting language interpreters. </a></p>
