--- a/en/Speare.html
+++ b/en/Speare.html
@@ -61,7 +61,8 @@ The free small IDE for scripting languages.
 <p class="greenbig">It's free!</p>
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
 <p>If you can't open the link above, please launch App Store and found Speare by searching.<br>
-<span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a>, your donation will drive us to continually improve it, or please recommend this app on your blog or rate this app so that helping other people can more easily find it. </p>
+<span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a>, your donation will drive me to continually improve it, or please recommend this app on your blog or rate this app so that helping other people can more easily find it. In addition, please take a look of the author's sample artworks, he'd like to make friends who like do creative works, the link: <a target="_blank" href="https://curveart7.blogspot.com/">https://curveart7.blogspot.com</a>.</p>
+
 
 <h2 class="dark">What's new</h2>
 <p class="dark">1. Improvement of "Lite Mode", i.e. hide toolbar and left side TreeView, this is useful and feels more light when open and edit several file but not work on a project that has large number of files. This function turn Speare to a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc.<br>
