--- a/en/Speare.html
+++ b/en/Speare.html
@@ -61,7 +61,10 @@ The free small IDE for scripting languages.
 <p class="greenbig">It's free!</p>
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
 <p>If you can't open the link above, please launch App Store and found Speare by searching.<br>
-<span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a>, your donation will drive me to continually improve it, or please recommend this app on your blog or rate this app so that helping other people can more easily find it. In addition, please take a look of the author's sample artworks, he'd like to make friends who like do creative works, the link: <a target="_blank" href="https://curveart7.blogspot.com/">https://curveart7.blogspot.com</a>.</p>
+<span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a>, your donation will drive me to continually improve it, or please recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
+
+<h2>About the author</h2>
+<p>The author of Speare code editor likes making artworks, such as making music, writing poem, shodo (calligraphy) expressing etc, please take a look of the author's sample artworks, he'd like to make friends who likes doing creative works, the link: <a target="_blank" href="https://curveart7.blogspot.com/">https://curveart7.blogspot.com</a>.</p>
 
 
 <h2 class="dark">What's new</h2>
