--- a/en/guard.html
+++ b/en/guard.html
@@ -307,7 +307,12 @@ Thank you!<br>
 <p>There're several graphical frontend for GnuPG was proposed to running on other platforms and will be released as free software forever, including Windows, Linux, iOS and Android, the author of Guard7 can make them but no enough time to accomplish them, please contact us if you're interested in making any one of them and willing to do contribution to free software world.</p>
 
 <h2>Why Guard7 is free?</h2>
-<p>Mac OS X should has such a valuable and useful tool like Guard7 that can encrypt confidential information simple, easy and free. In addition, please take a look of the author's sample artworks, he'd like to make friends who like do creative works, the link: <a target="_blank" href="https://curveart7.blogspot.com/">https://curveart7.blogspot.com</a>.</p>
+<p>Mac OS X should has such a valuable and useful tool like Guard7 that can encrypt confidential information simple, easy and free.</p>
+
+
+<h2>About the author</h2>
+<p>The author of Guard7 likes making artworks, such as making music, writing poem, shodo (calligraphy) expressing etc, please take a look of the author's sample artworks, he'd like to make friends who likes doing creative works, the link: <a target="_blank" href="https://curveart7.blogspot.com/">https://curveart7.blogspot.com</a>.</p>
+
 
 <h2>Thanks</h2>
 <p>Here sincerely thanks the authors and contributors of GNU Privacy Guard, for your excellent works.</p>
