original artworks create

--- a/en/MathHelfer.html
+++ b/en/MathHelfer.html
@@ -149,8 +149,8 @@ lt {color:#cce619;}
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Services </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
+      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
