--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Management consulting, leading advisor on business strategy, reliable partner of software architecture design.">
+<meta property="og:title" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,17 +9,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Management consulting, leading advisor on business strategy, reliable partner of software architecture design.">
-<meta name="service" content="Product development and independent consulting services">
+<meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
+<meta name="service" content="Independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
 <link rel="stylesheet" type="text/css" media="screen" href="http://www.sevenuc.com/css/stylesheet.css">
 <style type="text/css">
 .icon { float:left;margin: 0 1em 1em 0;width:96px;height:auto;padding: 4px 4px 4px 4px;border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px; vertical-align:center;}
 .small { font-style: italic; font-size: small; color:#000000; padding:4px 4px 4px 4px; border-radius: 2px; }
 .green {color: #007f00;}
 </style>
-<title>Sevenuc Consulting</title>
+<title>Original Artworks Creating</title>
 </head>
 <body>
 
@@ -38,18 +38,25 @@
 <div class="smallscreen">
 <!--h1 id="project_title">Welcome</h1><br><br-->
 <!--img src="http://www.sevenuc.com/images/home-hero.jpg">-->
+</div>
+
+<h2>Original Artworks Creating<br>
+Music, painting, poem and shodo (calligraphy).</h2>
+<p>美術品を発見、販売。<br>
+オリジナル音楽, オリジナルアート, 歌詞の作成, 曲の作成, 音楽の作成, 原創音樂, 原創藝術, <br>
+Original music, Original artworks, Lyric creation, Song creation, Music creation.<br><br>
+</p>
 
 
-
-<h2>No.1</h2>
-<p>The first rule to make product and system is respecting the end users.</p>
-
-<p><br><br></p>
-
+<div style="display:none;">
+<p>
+I'm plan to collect big money by sale my artworks, including music, drawing photographs, poem and shodo (calligraphy), and any other forms of artworks created by me to process a big project, a charity fund plan to rebuild language system, computer system, and education system to make different people groups to use their own real nature languages and their own real writing system in daily life. The current computer system, education system and almost any industry fields will be completely correspond to it. Please purchase my creative artworks to donate this project, thank you.
+</p>
 <h2>Speare code editor</h2>
 <p><a href="http://www.sevenuc.com/en/Speare.html"><img src="http://www.sevenuc.com/images/Speare/logo.png" class="icon"></a>
 <a href="http://www.sevenuc.com/en/Speare.html">Speare</a> is an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl. It was originally developed to providing a native scripting language debugging environment that seamlessly integrated with C and C++, and with an efficient code navigation and call routines tracing ability. Speare has very simple interface that allows end user to add a new programming language code runner, parser, syntax highlighting, code formatter and debugger to it. Most of the debuggers of Speare code editor supports extending themselves in source code level and directly switch between any version of self-compiled scripting language interpreters. </a></p>
 <p><br><br></p>
+
 
 <h2>Anida Audio Codec</h2>
 <p><a href="http://www.sevenuc.com/en/anida.html"><img src="http://www.sevenuc.com/images/Anida/Anida_logo.png" class="icon"></a>
@@ -57,14 +64,18 @@
 is an audio codec and audio compression format that designed to reduce audio data size to reduce transfer time and save disk space. It can be easily applied to large number of technology and product.<br><br>
 <b>Small! Fast! <br> Enjoy ultra small audio file now!</b><br>
 </p>
+</div>
+
 
 <!--div style="height:100vh; width:vw;"></div-->
 
 </div>
 
+
 <p><br><br><br><br><br><br><br></p>
 </section>
 </div>
+
 
 <!--p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
 <p><audio autoplay loop preload="none" id="myaudio">
@@ -72,15 +83,18 @@ is an audio codec and audio compression format that designed to reduce audio dat
 <source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
 
+
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Services </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
+      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
+
+
 </body></html>
