--- a/en/about.html
+++ b/en/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Senior technical consulting service.">
+<meta property="og:title" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,10 +9,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Reliable partner for your software architecture design.">
-<meta name="service" content="Product development and independent consulting services">
+<meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
+<meta name="service" content="Independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <title> About </title>
 </head>
@@ -32,11 +32,10 @@
 <p>
 <!-- img class="logo" src="../images/logo.svg" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;" -->
 
-<a href="http://www.sevenuc.com">Sevenuc Consulting</a> established in July 2007. At the past, our business is do software outsourcing from global customers, but from 2012, our vision has changed to leverage the culture and powerful intelligence of natural languages to derive product that is amenable to effective communication, utilisation and education for mankind, and the efficient ways of information processing by computer.</p>
 
-<p>Guided by our mission, we are mainly engaged in the solutions of language technology, supports research areas including but not limited to: language technologies for education, knowledge representation, knowledge translation, speech generation and synthesis, speech recognition, natural language understanding, machine translation, machine learning, intelligent information retrieval, storage and search, artificial intelligence, robots, real-time system, cryptography &amp; software protection, data compression, data mining &amp; analytics, multimedia information processing, special-purpose interpreter, compiler and programming language design and implementation.</p>
+Welcome to <a href="http://www.sevenuc.com">Sevenuc Consulting</a>, my personal website, I'm a software programmer (<a href="http://www.sevenuc.com/en/terms.html">some software</a> developed by me), senior architect and IT consultant. I know nothing about painting, artworks making, but from 2020, because of the darkness, I try to do something I never tried in my life, singing, experience Shodo, and drawing photograph, later, I'm even surprised the output works myself. So I put my artworks created by me on Youtube and Twitter, including music, drawing photographs, poem and Shodo (calligraphy), and any other forms of artworks. I'm plan to collect big money by sale my artworks to process a big project, and people can donate money to the fund to process the project that almost all industries in this planet will completely corresponding to it. Please connect me for more info, thank you.</p>
 
-<p>Good character make good things. We are unique and special, culture oriented, creative and do pioneer works, have the exclusive ability to make philosophy and thinking into your brand, business and products, please contact us and you'll be on the road of unfamiliar, understand, surprise, success, trust and satisfaction.</p>
+
 <!--div style="height:100vh; width:vw;"></div-->
 <p><br><br><br><br><br></p>
 
@@ -51,8 +50,8 @@
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Services </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
+      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
