--- a/en/artworks.html
+++ b/en/artworks.html
@@ -14,32 +14,68 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<title> Copyright Notice </title>
+<style type="text/css">
+.warning {color:#cce619;}
+.artworks { width: auto; height: 241px; border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
+.appicon { width: auto; height: 92px; border-radius: 10px; float:left; margin:0 1em 0.5em 0}
+.section { display: block; width: auto; min-height: 120px; }
+</style>
+<title>Original Artworks</title>
 </head>
 <body>
 
 <!-- HEADER -->
-<div id="header_wrap" class="outer">
+<!--div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title">Copyright Notice</h1>
-      <h2 id="project_tagline"></h2>
+      <h1 id="project_title">Apps</h1>
+      <h2 id="project_tagline">Some apps developed as useful tool or just for demonstration.</h2>
     </header>
-</div>
+</div-->
 
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
-<p>This website includes my private artworks, my original creative works, including music, painting, poem and shodo (calligraph), all of them are copyrighted, you can enjoy them by yourself, but don't use them for any other purpose.</p>
+<!--div id="player1" class="aplayer" style="display:none;"></div-->
+<div class="smallscreen">
 
-<p>The artworks published here are protected by relevant intellectual property rights. Without the author’s own agreement and written permission, any individual or organisation can not have any actions that infringe the author’s personal rights, including but not limited to remake (editing, conversion, plagiarism), quoted, reprinted and used for any profit-making business activities, offenders will be investigated for related legal responsibilities.
+<h2>Original Music</h2>
+<p class="section">
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg"><img src="../images/original-music.png" class="artworks" /></a><br>
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
+</p>
+<p><br></p>
+
+
+<h2>Original Painting</h2>
+<p class="section">
+<a href="https://curveart7.blogspot.com"><img src="../images/original-artworks.png" class="artworks" /></a><br>
+<a href="https://curveart7.blogspot.com">https://curveart7.blogspot.com</a>.
 </p>
 
-<p>此處發布的作品受相關智慧財產權和知識產權保護，未經作者本人同意和書面授權，任何組織或個人不得有侵害作者本人私人權益之任何行為，包括但不限於重製(編輯、轉換、翻唱、抄襲)、引用、轉載和用於任何以盈利為目的的商業行為，違者將追究相關法律責任。</p>
+<h2>Original Shodo (calligraphy)</h2>
+<p class="section">
+<a href="https://curveart7.blogspot.com"><img src="../images/original-shodo.png" class="artworks" /></a><br>
+<a href="https://curveart7.blogspot.com">https://curveart7.blogspot.com</a>.
+</p>
 
 
-<!--div style="height:100vh; width:vw;"></div-->
+<p>Please following me on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
+
+
+</div>
 </section>
 </div>
+<p><br></p>
+
+</div>
+
+
+<!--p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
+</audio></p>
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
