--- a/en/contact.html
+++ b/en/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Senior technical consulting service.">
+<meta property="og:title" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,10 +9,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Sevenuc Consulting, reliable partner for your software architecture design.">
-<meta name="service" content="Product development and independent consulting services">
+<meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
+<meta name="service" content="Independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .smallimg {padding:0 auto;border:none;vertical-align:middle; height:18px; width:20px;}
@@ -35,13 +35,13 @@
 <div class="smallscreen">
 
 <ul class="nonelist">
-<!--li><img src="../images/Twitter.png" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Twitter</a></li-->
 <!--li><img src="../images/g+.jpg" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Google+</a></li-->
-<li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Skype: sevenuc</a></li>
-<li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp;<a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
+<li> <img src="../images/Twitter.png" class="smallimg" />&nbsp;&nbsp; Twitter:<a href="https://www.twitter.com/tkmrysnb"> tkmrysnb </a></li>
+<li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);"> sevenuc </a></li>
+<li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
 
-<p>Please give us a call, speak directly with customer service via Skype or schedule a time for us to call you.</p>
-<p>You may sign and encrypt your message to our team using our public key, which has the key ID: 743A85F1 and fingerprint: 889E 957C B7C5 45DC 1862  C5B1 5EFA DC95 743A 85F1. This ensures that only we can read your message and the public key is available <a href= "http://www.sevenuc.com/download/henry@sevenuc.com.asc">here</a>.<br></p>
+<p>Please directly connect to me via Twitter or Skype or schedule a time for me to call you.</p>
+
 <!--div style="height:100vh; width:vw;"></div-->
 
 <p><br><br><br><br><br></p>
@@ -58,8 +58,8 @@
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Services </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
+      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
