--- a/en/artworks.html
+++ b/en/artworks.html
@@ -40,7 +40,7 @@
 
 <h2>Original Music</h2>
 <p class="section">
-<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg"><img src="../images/original-music.png" class="artworks" /></a><br>
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg"><img src="../images/original-music.png" class="artworks2" /></a><br>
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
 </p>
 <p><br></p>
