--- a/en/terms.html
+++ b/en/terms.html
@@ -29,12 +29,15 @@
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
-<p>This website includes my private artworks, my original creative works, including music, painting, poem and shodo (calligraph), all of them are copyrighted, you can enjoy them by yourself, but don't use them for any other purpose.</p>
+
+<p>This website includes my private artworks, my original creative artworks, including music, painting, poem and shodo (calligraph), all of them are copyrighted.</p>
+
+<p>ここで公開されているアートワークは、関連する知的財産権によって保護されています。 著者自身の同意と書面による許可なしに、個人または組織は、リメイク（編集、変換、盗作）、引用、転載、営利事業での使用など、著者の個人の権利を侵害する行為を行うことはできません 活動、犯罪者は関連する法的責任について調査されます。</p>
+
+<p>此處發布的作品受相關智慧財產權和知識產權保護，未經作者本人同意和書面授權，任何組織或個人不得有侵害作者本人私人權益之任何行為，包括但不限於重製(編輯、轉換、翻唱、抄襲)、引用、轉載和用於任何以盈利為目的的商業行為，違者將追究相關法律責任。</p>
 
 <p>The artworks published here are protected by relevant intellectual property rights. Without the author’s own agreement and written permission, any individual or organisation can not have any actions that infringe the author’s personal rights, including but not limited to remake (editing, conversion, plagiarism), quoted, reprinted and used for any profit-making business activities, offenders will be investigated for related legal responsibilities.
 </p>
-
-<p>此處發布的作品受相關智慧財產權和知識產權保護，未經作者本人同意和書面授權，任何組織或個人不得有侵害作者本人私人權益之任何行為，包括但不限於重製(編輯、轉換、翻唱、抄襲)、引用、轉載和用於任何以盈利為目的的商業行為，違者將追究相關法律責任。</p>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
