--- a/en/contact.html
+++ b/en/contact.html
@@ -36,11 +36,11 @@
 
 <ul class="nonelist">
 <!--li><img src="../images/g+.jpg" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Google+</a></li-->
-<li> <img src="../images/Twitter.png" class="smallimg" />&nbsp;&nbsp; Twitter:<a href="https://www.twitter.com/tkmrysnb"> tkmrysnb </a></li>
-<li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);"> sevenuc </a></li>
+<li> <img src="../images/Twitter.png" class="smallimg" />&nbsp;&nbsp; Twitter:<a href="https://www.twitter.com/tkmrysnb" target="_blank"> tkmrysnb </a></li>
+<!--li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);"> sevenuc </a></li-->
 <li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
 
-<p>Please directly connect to me via Twitter or Skype or schedule a time for me to call you.</p>
+<p>Please directly connect me via Twitter or <br> message me via email.</p>
 
 <!--div style="height:100vh; width:vw;"></div-->
 
