--- a/en/artworks.html
+++ b/en/artworks.html
@@ -40,26 +40,26 @@
 
 <h2>Original Music</h2>
 <p class="section">
-<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg"><img src="../images/original-music.png" class="artworks2" /></a><br>
-<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks2" /></a><br>
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
 </p>
 <p><br></p>
 
 
 <h2>Original Painting</h2>
 <p class="section">
-<a href="https://curveart7.blogspot.com"><img src="../images/original-artworks.png" class="artworks" /></a><br>
-<a href="https://curveart7.blogspot.com">https://curveart7.blogspot.com</a>.
+<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="artworks" /></a><br>
+<a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 
 <h2>Original Shodo (calligraphy)</h2>
 <p class="section">
-<a href="https://curveart7.blogspot.com"><img src="../images/original-shodo.png" class="artworks" /></a><br>
-<a href="https://curveart7.blogspot.com">https://curveart7.blogspot.com</a>.
+<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a><br>
+<a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 
 
-<p>Please following me on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
+<p>More info, please visit my account on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
 
 
 </div>
