--- a/en/artworks.html
+++ b/en/artworks.html
@@ -12,7 +12,7 @@
 <meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
 <meta name="service" content="Independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .warning {color:#cce619;}
@@ -52,7 +52,7 @@
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 
-<h2>Original Shodo (calligraphy)</h2>
+<h2>Original Shodo (Calligraphy)</h2>
 <p class="section">
 <a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a><br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
