--- a/en/contact.html
+++ b/en/contact.html
@@ -12,7 +12,7 @@
 <meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
 <meta name="service" content="Independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .smallimg {padding:0 auto;border:none;vertical-align:middle; height:18px; width:20px;}
