--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
 <meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
 <meta name="service" content="Independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks">
 <link rel="stylesheet" type="text/css" media="screen" href="http://www.sevenuc.com/css/stylesheet.css">
 <style type="text/css">
 .icon { float:left;margin: 0 1em 1em 0;width:96px;height:auto;padding: 4px 4px 4px 4px;border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px; vertical-align:center;}
