--- a/en/artworks.html
+++ b/en/artworks.html
@@ -16,7 +16,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .warning {color:#cce619;}
-.artworks { width: auto; height: 241px; border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
+.artworks { width: auto; height: 241px; max-width:100%;border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
+.artworks2 { width: auto; height: 240px; max-width:100%;border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
 .appicon { width: auto; height: 92px; border-radius: 10px; float:left; margin:0 1em 0.5em 0}
 .section { display: block; width: auto; min-height: 120px; }
 </style>
@@ -40,7 +41,7 @@
 
 <h2>Original Music</h2>
 <p class="section">
-<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks2" /></a><br>
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks1" /></a><br>
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
 </p>
 <p><br></p>
@@ -48,9 +49,12 @@
 
 <h2>Original Painting</h2>
 <p class="section">
-<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="artworks" /></a><br>
+<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="artworks2" /></a>
+<br><br><br><br><br><br><br><br><br><br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
+<p><br></p>
+
 
 <h2>Original Shodo (Calligraphy)</h2>
 <p class="section">
