--- a/en/about.html
+++ b/en/about.html
@@ -10,9 +10,9 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
 <meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
-<meta name="service" content="Independent personal music publishing">
+<meta name="service" content="Independent singer songwriter, independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks, Independent Singer Songwriter">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <title> About </title>
 </head>
@@ -33,7 +33,7 @@
 <!-- img class="logo" src="../images/logo.svg" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;" -->
 
 
-Welcome to <a href="http://www.sevenuc.com">Sevenuc Consulting</a>, this is my personal website, I'm a software programmer (<a href="http://www.sevenuc.com/en/apps.html">some software</a> developed by me), senior architect and IT consultant. I know nothing about painting, artworks making, but I try to do something except my professional work, e.g. singing, experience Shodo, and drawing photograph, and when many years past, I'm even surprised the artworks made by myself. So I put my original creative artworks on Youtube and Twitter, including music, drawing photographs, poem and Shodo (calligraphy), and other forms of artworks. I'm plan to collect big money by sale my original artworks, by peoples' donation to process a project that almost all industries in this planet will completely corresponding to it. Please connect me for more info about it, thank you.</p>
+Welcome to <a href="http://www.sevenuc.com">Sevenuc Consulting</a>, this is my personal website, I'm a software programmer (<a href="http://www.sevenuc.com/en/apps.html">some software</a> developed by me), senior architect and IT consultant. I know nothing about painting, artworks making, but I try to do something except my professional work, e.g. singing, experience Shodo, and drawing photograph, and when many years past, I'm even surprised the artworks made by myself. So I put my original creative artworks on Youtube and Twitter, including music, drawing photographs, poem and Shodo (calligraphy), and other forms of artworks. And now, I'm an independent singer songwriter, Shodo artist, Kanji artworks creator, and a creative drawing creator. I'm plan to collect big money by sale my original artworks, by peoples' donation to process a project that almost all industries in this planet will completely corresponding to it. Please connect me for more info about it, thank you.</p>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
