--- a/en/artworks.html
+++ b/en/artworks.html
@@ -10,9 +10,9 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
 <meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
-<meta name="service" content="Independent personal music publishing">
+<meta name="service" content="Independent singer songwriter, independent personal music publishing">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks">
+<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks, Independent Singer Songwriter">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .warning {color:#cce619;}
@@ -21,7 +21,7 @@
 .appicon { width: auto; height: 92px; border-radius: 10px; float:left; margin:0 1em 0.5em 0}
 .section { display: block; width: auto; min-height: 120px; }
 </style>
-<title>Original Artworks</title>
+<title>Original Artworks Creating</title>
 </head>
 <body>
 
@@ -39,31 +39,39 @@
 <!--div id="player1" class="aplayer" style="display:none;"></div-->
 <div class="smallscreen">
 
-<h2>Original Music</h2>
+<h2>Original Music Creating</h2>
 <p class="section">
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks1" /></a><br>
+I'm an independent singer songwriter, <br>
+some samples, please take a look here:<br>
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
 </p>
 <p><br></p>
 
 
-<h2>Original Painting</h2>
+<h2>Original Creative Drawing Artworks Creating</h2>
 <p class="section">
 <a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="artworks2" /></a>
-<br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+My personal creative drawing (computer pixel artworks, handmade pixel by pixel with imaging in mind), 
+some sample of my original drawing artworks here:<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 <p><br></p>
 
 
-<h2>Original Shodo (Calligraphy)</h2>
+<h2>Original Shodo (Calligraphy) Artworks Creating</h2>
 <p class="section">
-<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a><br>
+<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+I'm a Shodo artist, Kanji artworks creator.<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 
 
-<p>More info, please visit my account on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
+<p>I create my artworks without any template or reference!<br>
+Just create everything imaging in mind!<br>
+More info, please visit my account on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
 
 
 </div>
