--- a/en/artworks.html
+++ b/en/artworks.html
@@ -42,8 +42,10 @@
 <h2>Original Music Creating</h2>
 <p class="section">
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks1" /></a><br>
-I'm an independent singer songwriter, <br>
-some samples, please take a look here:<br>
+<b>Poem &amp; Music</b><br>
+Poem is the soul, and music is the form.<br>
+I'm an independent singer songwriter, I always want to make different background music to match the poems written by myself.
+Some samples, please take a look here:<br>
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
 </p>
 <p><br></p>
@@ -53,8 +55,10 @@ some samples, please take a look here:<br>
 <p class="section">
 <a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="artworks2" /></a>
 <br><br><br><br><br><br><br><br><br><br><br><br>
-My personal creative drawing (computer pixel artworks, handmade pixel by pixel with imaging in mind), 
-some sample of my original drawing artworks here:<br>
+<b>Thinking &amp; Drawing Artworks</b><br>
+Thinking is the soul inside, and Drawing is the form.<br>
+My personal creative drawing artworks with imaging in mind without reference or model,
+some sample can be visited here:<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 <p><br></p>
@@ -64,13 +68,15 @@ some sample of my original drawing artworks here:<br>
 <p class="section">
 <a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a>
 <br><br><br><br><br><br><br><br><br><br><br><br>
+<b>Poem &amp; Kanji Artworks</b><br>
 I'm a Shodo artist, Kanji artworks creator.<br>
+I always want to make different Shodo style for my beautiful poems.<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 
-
+<hr>
 <p>I create my artworks without any template or reference!<br>
-Just create everything imaging in mind!<br>
+Just create everything imaging in my mind!<br>
 More info, please visit my account on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
 
 
