--- a/en/artworks.html
+++ b/en/artworks.html
@@ -41,8 +41,14 @@
 
 <h2>Original Music Creating</h2>
 <p class="section">
-<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks1" /></a><br>
-<b>Poem &amp; Music</b><br>
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks1" /></a><br></p>
+
+<p> <a href="https://www.imdb.com/title/tt0096283/" target="_blank"> My original music</a>.</p>
+<video class="videobox" id="mainVideo" width="320" height="240" controls>
+<source src="https://youtu.be/JGlFrINc2-c" type="video/mp4">
+</video></p>
+
+<p><b>Poem &amp; Music</b><br>
 Poem is the soul, and music is the form.<br>
 I'm an independent singer songwriter, I always want to make different background music to match the poems written by myself.
 Some samples, please take a look here:<br>
