--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -138,7 +138,9 @@ The follow are the steps about how to synthesis video with lyrics sheet, of cour
 <img src="../images/littlefox/white.png" /><br>
 <p><span><img src="../images/littlefox/tips.png" class="tips" /></span>
 1. You can directly input sample text into the "Sample Text Lines" box to replace the default one line or all.<br>
-2. Set transparent background of the output movie, or transparent shadow, please click the button on the right side of "<b>Screen Background</b>" or the button on the right side of "<b>Shadow Colour</b>", and then on the prompt panel select the colour <span class="green">"White"</span>.<br><br></p>
+2. Set transparent background of the output movie, or transparent shadow, please click the button on the right side of "<b>Screen Background</b>" or the button on the right side of "<b>Shadow Colour</b>", and then on the prompt panel select the colour <span class="green">"White"</span>.<br>
+3. You can make a video with a bigger resolution e.g. 1280×720, and then scaled it down to a smaller resolution e.g. 640x360 to let the subtitle characters looks more cleaner. It's not necessary to do this in ordinary usage situations.
+<br></p>
 
 <h2>What's new:</h2>
 <p>1. Subtitle placed at the bottom of outside margin without video area overlay.</p>
