--- a/en/about.html
+++ b/en/about.html
@@ -33,7 +33,7 @@
 <!-- img class="logo" src="../images/logo.svg" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;" -->
 
 
-Welcome to <a href="http://www.sevenuc.com">Sevenuc Consulting</a>, this is my personal website, I'm a software programmer (<a href="http://www.sevenuc.com/en/apps.html">some software</a> developed by me), senior architect and IT consultant. I know nothing about painting, artworks making, but I try to do something except my professional work, e.g. writing poems and music creating, experiencing Shodo, and drawing photograph, and when many years past, I'm even surprised the artworks made by myself. So I put my original creative artworks on Youtube and Twitter, including music, drawing photographs, poems and Shodo (calligraphy), and other forms of artworks. And now, I'm an independent singer songwriter, Shodo artist, Kanji artworks creator, and a creative drawing creator. </p>
+Welcome to <a href="http://www.sevenuc.com">Sevenuc Consulting</a>, this is my personal website, I'm a software programmer, senior architect and IT consultant, <a href="http://www.sevenuc.com/en/apps.html">some software</a> developed by me. </p>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
