--- a/en/artworks.html
+++ b/en/artworks.html
@@ -70,20 +70,22 @@ some sample can be visited here:<br>
 <p><br></p>
 
 
-<h2>Original Shodo (Calligraphy) Artworks Creating</h2>
+<h2>Original Shodo Artworks Creating</h2>
 <p class="section">
 <a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a>
 <br><br><br><br><br><br><br><br><br><br><br><br>
 <b>Poem &amp; Kanji Artworks</b><br>
 I'm a Shodo artist, Kanji artworks creator.<br>
-I always want to make different Shodo style for my beautiful poems.<br>
+I always want to make different Shodo (Calligraphy) style for my beautiful poems.<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
+
 
 <hr>
 <p>I create my artworks without any template or reference!<br>
 Just create everything imaging in my mind!<br>
 More info, please visit my account on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
+
 
 
 </div>
