--- a/en/about.html
+++ b/en/about.html
@@ -33,7 +33,7 @@
 <!-- img class="logo" src="../images/logo.svg" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;" -->
 
 
-Welcome to <a href="http://www.sevenuc.com">Sevenuc Consulting</a>, this is my personal website, I'm a software programmer, senior architect and IT consultant, <a href="http://www.sevenuc.com/en/apps.html">some software</a> developed by me. </p>
+Welcome to my personal website, I'm a software programmer, <a href="http://www.sevenuc.com/en/apps.html">some software</a> developed by myself. </p>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
