--- a/en/artworks.html
+++ b/en/artworks.html
@@ -67,8 +67,8 @@ some sample can be visited here:<br>
 
 <h2>Original Shodo Artworks Creating</h2>
 <p class="section">
-<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-shodo.png" class="artworks" /></a>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<a href="https://www.twitter.com/tkmrysnb" target="_blank"><img src="../images/original-shodo.png" class="screenshots" /></a>
+<br><br>
 <b>Poem &amp; Kanji Artworks</b><br>
 I'm a Shodo artist, Kanji artworks creator.<br>
 I always want to make different Shodo (Calligraphy) style for my beautiful poems.<br>
