--- a/en/artworks.html
+++ b/en/artworks.html
@@ -41,7 +41,7 @@
 
 <h2>Original Music Creating</h2>
 <p class="section">
-<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="artworks1" /></a><br></p>
+<a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="screenshots" /></a><br></p>
 
 <p><b>Poem &amp; Music</b><br>
 Poem is the soul, and music is the form.<br>
@@ -54,8 +54,8 @@ Some samples, please take a look here:<br>
 
 <h2>Original Creative Drawing Artworks Creating</h2>
 <p class="section">
-<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="artworks2" /></a>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="screenshots" /></a>
+<br><br>
 <b>Thinking &amp; Drawing Artworks</b><br>
 Thinking is the soul inside, and Drawing is the form.<br>
 My personal creative drawing artworks with imaging in mind without reference or model,
