--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -20,7 +20,7 @@
 .green, gr, lt{color: #007f00;}
 .strike {text-decoration: line-through;}
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
-.button { width: auto; height: 36pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: #000000;}
+.button { width: auto; height: 36pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: rgba(0, 0, 0, 0);}
 ul { list-style-type:none; list-style:none;}
 .tips { width:auto; height: 22px;}
 th { background:#333; color:white;text-align: center;}
