--- a/en/Taihaa.html
+++ b/en/Taihaa.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .none {  padding:0;  margin: 0; }
-.button { width: auto; height: 25pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: #f0f0f0;}
+.button { width: auto; height: 25pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: rgba(0, 0, 0, 0);}
 .small { font-size: 12pt;}
 .green {color: #007f00;}
 .machine { font-size: 12pt; margin-left: 50pt; }  
