--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -19,7 +19,7 @@
 .greenbig {color: #007f00;font-size:1.2em;}
 .strike {text-decoration: line-through;}
 .treasure { color: rgba(255, 0, 255, 0.5); font-size: 11px;font-style: italic; font-weight: bold; background: none; }
-.button { width: auto; height: 36pt; vertical-align:middle;background: #000000;}
+.button { width: auto; height: 36pt; vertical-align:middle;background: rgba(0, 0, 0, 0);}
 /*body { background: #f9f9f9;}*/
 </style>
 
