--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -129,6 +129,7 @@ The lyrics sheet usually have a header like above, please refer the format here.
 </pre>
 </p>
 
+<div style="display:none;">
 <h2>♪ More Examples</h2>
 <p><b>Ripples of Yuet music </b><br>
 <span class="treasure">ETERNAL TREASURE</span>
@@ -137,8 +138,11 @@ The lyrics sheet usually have a header like above, please refer the format here.
 Mr. 許冠傑/Samuel Hui Koon-Kit,<br>
 Mr. 陳百強/Danny Chan Pak-keung.<br>
 </p>
+</div>
+
+
 <p><div id="player1" class="aplayer" style="display:none;"></div></p>
-<p><a href="http://blog.sevenuc.com/index.html" target="_blank" stlye="float:left; margin-right:1em;"><svg width="20" height="20" viewBox="0 0 20 20" style="float:left; fill:#f85625; color:#ffffff; position: relative; border: 0; margin-left:0;right: 0;">
+<p style="display:none;"><a href="http://blog.sevenuc.com/index.html" target="_blank" stlye="float:left; margin-right:1em;"><svg width="20" height="20" viewBox="0 0 20 20" style="float:left; fill:#f85625; color:#ffffff; position: relative; border: 0; margin-left:0;right: 0;">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16,1H4C3.447,1,3,1.447,3,2v16c0,0.552,0.447,1,1,1h12c0.553,0,1-0.448,1-1V2
 	C17,1.448,16.553,1,16,1z M12.795,11.519c-0.185,0.382-0.373,0.402-0.291,0C12.715,10.48,12.572,8.248,11,8v4.75
 	c0,0.973-0.448,1.82-1.639,2.203c-1.156,0.369-2.449-0.016-2.752-0.846c-0.303-0.83,0.377-1.84,1.518-2.256
